# prl_seg

./: .gitignore  CMakeLists.txt  README.md  config.py  env.h.in  main.cpp  preprocess.cpp  preprocess_qsm.cpp  preprocess_torch.py  training.ipynb  training.py  visualization.ipynb
lib/: QSM.cpp  QSM.h  c_romeo.h  cmd.cpp  dataset.cpp  dataset.h  env.h  fsl.cpp  fsl.h  medi.cpp  medi.h  romeo.cpp  romeo.h  sitk_utils.cpp
libs/FSL/: fsl_cmd.sh
libs/MEDI/: MEDI_PDF.m  test.m
prl_seg/: CMakeLists.txt  prl_seg.cpp  prl_seg.h
prl_seg/lib/: c_romeo.h  cmd.h  medi.cpp  medi.h  romeo.cpp  romeo.h  sitk_utils.cpp  sitk_utils.h
prl_seg/libs/MEDI/: MEDI_PDF.m  MEDI_fit_ppm_complex.m
pylib/: UNet.py  models.py  nifti.py  singleton.py  torch_utils.py  training.py  vis.py  visualization.py
pylib/datasets/: dataset.py  lazy_dataset.py  star.py
pylib/evaluation/: evaluation.py
pylib/imaging/: lesion_tools.py  transforms.py
pylib/models/: resnet.py  resnet3d.py  unet.py  unet3d.py
qsm_pipeline/: FANSI_DI.m  MEDI_PDF.m  NLQSM.m
qsm_pipeline/FANSI/: FANSI.m  README.txt  benchmark.m  compute_xsim_old.m  dipole_kernel_angulated.m  dipole_kernel_fansi.m  dipole_kernel_laplacian.m  gradient_calc.m  imagesc3d2.m  nlTGV.m  nlTV.m  script_DICOM_Philips.m  script_cosmos_phantom.m  script_fansi_phantom.m  script_invivo.m  script_qsmchallenge.m  threshold_gradient.m  wTGV.m  wTV.m
qsm_pipeline/FANSI/AnalyticModels/: chi_cylinder.m  chi_intcomplexsphere.m  chi_intsphere.m  chi_sphere.m
qsm_pipeline/FANSI/BackgroundRemoval/: backmodel.m  fitmodels.m  polyfit3D_NthOrder.m
qsm_pipeline/FANSI/BackgroundRemoval/MSMV/: extrapolatefield_iter.m  extrapolatefield_poisson.m  gauss_kernel.m  imresizen.m  msmv.m  msmv_noextrapolation.m
qsm_pipeline/FANSI/BackgroundRemoval/NPDF/: npdfCG.m
qsm_pipeline/FANSI/Inversion/ClosedForm/: tik.m  tkd.m
qsm_pipeline/FANSI/Inversion/L1-QSM/: nlL1TV.m  wL1TV.m
qsm_pipeline/FANSI/Inversion/WH-QSM/: WH_nlTGV.m  WH_nlTV.m  WH_wTGV.m  WH_wTV.m
qsm_pipeline/FANSI/Inversion/eNDI/: compute_freqe_auto.m  create_freqmasks_auto.m  ldi.m  ndi.m  ndiCG.m  ndiCG_auto.m  ndi_auto.m
qsm_pipeline/FANSI/Metrics/: compute_cc.m  compute_hfen.m  compute_metrics.m  compute_mi.m  compute_rmse.m  compute_ssim.m  compute_xsim_allmaps.m
qsm_pipeline/FANSI/MultiechoFit/: ilinearLSQR.m  linearLSQR.m  nlme_L2gradient.m  nlme_tik.m
qsm_pipeline/FANSI/OptParams/: calc_curv_diff.m  calc_curv_parametric.m  compute_costsL1.m  compute_costsTGV.m  compute_freqe.m  compute_roicosts.m  create_freqmasks.m  create_freqmasks_anisotropic.m  draw_freque.m  draw_lcurve.m  draw_lcurve_linear.m  freq_script.m  zetafunc.m
qsm_pipeline/FANSI/Relaxometry/: nlT2sL2.m  nlT2sTGV.m  nlT2sTGVechoes.m  nlT2sTV.m  nlT2sTVechoes.m  t2s.m
qsm_pipeline/FANSI/Unwrapping/: gduw.m  gduw_unbound.m  nluwl2.m  unwrap.m  unwrapLaplacian.m
qsm_pipeline/FSL/: fsl_cmd.sh
qsm_pipeline/MEDI/: genMask.m  parse_QSM_input.m
qsm_pipeline/Utils/: quat_to_rot.m
